# typst-lsp-sem-tok

./: Cargo.toml  readme.md  typst.vim
src/: main.rs  tokens.rs
