[package]
name = "typst-lsp-sem-tok"
version = "0.1.0"
edition = "2021"

[dependencies]
comemo = "0.2"
dashmap = "5.4.0"
ropey = "1.6.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.19"
typst = { git = "https://github.com/typst/typst.git" }
typst-library = { git = "https://github.com/typst/typst.git" }
